# second_thought_backend

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml
app/: __init__.py
app/api/: __init__.py  auth_routes.py  dependencies.py  schedule_routes.py  schemas.py  user_routes.py  webhook_routes.py
app/bot/: __init__.py  telegram_bot.py
app/db/: __init__.py  database.py  models.py
app/services/: __init__.py  auth_service.py  schedule_service.py
k8s/base/: argocd-app.yaml  deployment.yaml  externalsecret-postgres.yaml  externalsecret.yaml  ingress.yaml  kustomization.yaml  postgres.yaml  service.yaml
k8s/overlays/prod/: kustomization.yaml
